--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "typescript": "^4.2.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
